# seismo-trainning

./: GEMINI.md  main.py  pyproject.toml  train.py
